--- a/style.css
+++ b/style.css
@@ -349,6 +349,9 @@ hr{
     border: 0px;
     padding-top: 8px;
 }
+.a{
+    color: #121212;
+}
 /* ////////////////////container-helps\\\\\\\\\\\\\\\\\\\\\ */
 .container-helps{
     text-align: center;
